# fixlog_back

./: .gitignore  .python-version  Dockerfile  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: checks.yml  deploy.yml
app/accounts/: apps.py  models.py
app/accounts/migrations/: 0001_initial.py
app/chat/: consumers.py
app/config/: asgi.py  routing.py  wsgi.py
app/config/settings/: base.py
app/config/urls/: base.py
app/crew/: apps.py  models.py
app/crew/migrations/: 0001_initial.py
app/fixed/: apps.py
app/fixletter/: apps.py  models.py
app/fixletter/migrations/: 0001_initial.py  0002_alter_fixletter_last_message.py
app/fixletter/tests/: test_models.py
app/fixred/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/fixred/migrations/: 0001_initial.py  0002_alter_fixredblock_options_alter_fixredblock_blocked_and_more.py  0002_rename_updated_at_fixred_updated_at.py
app/fixred/tests/: test_models.py
app/util/: apps.py  jwt_utils.py  models.py  serializers.py  urls.py  views.py
app/util/migrations/: 0001_initial.py
app/util/tests/: test_api.py  test_model.py
app/workroom/: apps.py
nginx/: nginx.conf
scripts/: run_api.sh  run_daphne.sh
