[project]
name = "fixlog"
version = "0.1.0"
description = ""
authors = [
    {name = "seonhongmun",email = "mshg_@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3,<6.0.0",
    "djangorestframework>=3.15,<4.0.0",
    "drf-spectacular>=0.27,<1.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "redis>=6.2.0,<7.0.0",
    "django-redis>=5.4,<6.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
factory-boy = "^3.3.3"
faker = "^37.4.0"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
